# Practica_SD_2

./: .env.example  .gitignore  ENUNCIADO.md  README.md  pyproject.toml
config/: README.md  postgresql.yaml  rabbitmq.yaml
deploy/postgresql/: create_tables.sh  delete_tables.sh  reset_tables.sh
src/: README.md
src/elastic_ticketing/: __init__.py  bootstrap.py
src/elastic_ticketing/adapters/postgresql/: __init__.py  connection.py  repositories.py  schema.py
src/elastic_ticketing/adapters/rabbitmq/: __init__.py  connection.py  consumer.py  publisher.py  queue_setup.py  serializer.py
src/elastic_ticketing/apps/: postgres_cli.py
src/elastic_ticketing/apps/worker/: __init__.py  handler.py  worker_loop.py
src/elastic_ticketing/core/: __init__.py
src/elastic_ticketing/core/domain/: __init__.py  enums.py  models.py
src/elastic_ticketing/core/ports/: __init__.py  completion_repository.py  request_repository.py  ticket_repository.py
src/elastic_ticketing/core/services/: __init__.py  idempotency_service.py  numbered_service.py  purchase_service.py  unnumbered_service.py  validation_service.py
src/elastic_ticketing/shared/: config.py  constants.py  exceptions.py  serialization.py
tests/: README.md  test_correctness_requirements.py  test_fault_tolerance_requirements.py  test_postgresql_integration.py  test_postgresql_repositories.py  test_worker_flow.py
