[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "elastic-ticketing"
version = "0.1.0"
description = "Scalable and elastic ticket service for the SD practice."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pika>=1.3,<2",
    "psycopg[binary]>=3.2,<4",
]
